# wirelog-python

./: .gitignore  README.md  publish.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/wirelog/: __init__.py  client.py  ratelimit.py
tests/: __init__.py  test_client.py  test_ratelimit.py
